--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="intro__wrap">
         <img class="intro__icon" src="images/Icon_Logo.png" alt="Brand Icon" />
         <h2 class="intro__tagline">I'm
-          <span class="name">Joeb Rogers</span>, a passionate professional gameplay and tools engineer who loves to design and develop game-focused
+          <span class="name">Lucas Nogueira</span>, a passionate professional gameplay and tools engineer who loves to design and develop game-focused
           applications.
         </h2>
       </div>
