--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
 
   <title>Lucas Nogueira</title>
-  <meta name="description" content="Portfolio site for independent gameplay and tools engineering contractor Joeb Rogers.">
-  <meta name="author" content="Joeb Rogers">
+  <meta name="description" content="My game dev portfolio.">
+  <meta name="author" content="Lucas Nogueira">
 
   <link rel="stylesheet" href="css/main.css">
   <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
@@ -17,17 +17,16 @@
 <body>
   <div id="site">
     <header class="intro">
-      <h1 class="intro__hello">Hello!</h1>
+      <h1 class="intro__hello">Olá!</h1>
       <div class="intro__wrap">
         <img class="intro__icon" src="images/Icon_Logo.png" alt="Brand Icon" />
         <h2 class="intro__tagline">I'm
-          <span class="name">Lucas Nogueira</span>, a passionate professional gameplay and tools engineer who loves to design and develop game-focused
-          applications.
+          <span class="name">Lucas Nogueira</span>, a hobby game developer that is taking his first steps in this immense world.
         </h2>
       </div>
-      <h3 class="intro__contact">Got an interesting project? Send me a message at
+      <h3 class="intro__contact">Would you like to get in touch? Email me at
         <span>
-          <a href="mailto:info@joebrogers.com" target="_blank" class="highlight-link">info@joebrogers.com</a>
+          <a href="mailto:info@joebrogers.com" target="_blank" class="highlight-link">lucas.fn@hotmail.com</a>
         </span>
       </h3>
     </header>
