--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <div class="intro__wrap">
         <img class="intro__icon" src="images/Icon_Logo.png" alt="Brand Icon" />
         <h2 class="intro__tagline">I'm
-          <span class="name">Lucas Nogueira</span>, a hobby game developer that is taking his first steps in this immense world.
+          <span class="name">Lucas Nogueira</span>, a hobbyist game developer taking my first steps into game creation.
         </h2>
       </div>
       <h3 class="intro__contact">Would you like to get in touch? Email me at
         <span>
-          <a href="mailto:info@joebrogers.com" target="_blank" class="highlight-link">lucas.fn@hotmail.com</a>
+          <a href="mailto:lucas.fn@hotmail.com" target="_blank" class="highlight-link">lucas.fn@hotmail.com</a>
         </span>
       </h3>
     </header>
