--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <header class="intro">
       <h1 class="intro__hello">Olá!</h1>
       <div class="intro__wrap">
-        <img class="intro__icon" src="images/profile.jpeg" alt="Brand Icon" />
+        <div class="circle-wrapper">
+            <img class="intro__icon" src="images/profile.jpeg" alt="Brand Icon" />
+        </div>
         <h2 class="intro__tagline">I'm
           <span class="name">Lucas Nogueira</span>, a hobbyist game developer taking my first steps into game creation.
         </h2>
