--- a/index.html
+++ b/index.html
@@ -232,59 +232,10 @@
       </div>
     </section>
 
-    <section class="section assets" data-sr>
-      <div class="section__title">Free Assets</div>
-      <div class="section__content">
-        <div class="project">
-          <div class="project__name">
-            <a href="https://joebrogers.itch.io/bitpotion" target="_blank" class="arrow-link">BitPotion</a>
-          </div>
-          <p>BitPotion is a cute 4x7 pixel font available for both commercial and non-commercial use under the
-            <a class="underline-link" href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC-BY</a> license.</p>
-        </div>
-        <div class="project">
-          <div class="project__name">
-            <a href="https://assetstore.unity.com/packages/tools/utilities/scriptfinder-119055" target="_blank" class="arrow-link">ScriptFinder</a>
-          </div>
-          <p>ScriptFinder is a Unity editor extension to quickly find all references and dependencies of a target script within your project.</p>
-        </div>
-        <div class="project">
-          <div class="project__name">
-            <a href="https://joebrogers.itch.io/directoryapp" target="_blank" class="arrow-link">Directory</a>
-          </div>
-          <p>Directory is a lightweight utility to template project structures and simplify the process of starting new projects,
-            as well as help you stay organised.</p>
-        </div>
-        <div class="project">
-          <div class="project__name">
-            <a href="https://github.com/JoebRogers/PICO-EC" target="_blank" class="arrow-link">PICO-EC</a>
-          </div>
-          <p>A tiny scene-entity-component library created for the PICO-8 fantasty console.</p>
-          <p>For the API Docs, you can head <a class="underline-link" href="https://joebrogers.com/Libraries/PICO-EC/API/1.0/" target="_blank">here.</a></p>
-        </div>
-        <div class="project">
-          <div class="project__name">
-            <a href="https://github.com/JoebRogers/PICO-Tween" target="_blank" class="arrow-link">PICO-Tween</a>
-          </div>
-          <p>A small library of tweening/easing functions for use in the PICO-8 fantasy console, inspired by Robert Penner's easing functions.</p>
-        </div>
-        <div class="project">
-          <div class="project__name">
-            <a href="https://github.com/JoebRogers/PICO-TweenMachine" target="_blank" class="arrow-link">PICO-TweenMachine</a>
-          </div>
-          <p>A small wrapper library for the PICO-8 fantasy console, meant as an extension to the PICO-Tween easing library.</p>
-          <p>For the API Docs, you can head <a class="underline-link" href="https://joebrogers.com/Libraries/PICO-Tween-Machine/API/1.0/" target="_blank">here.</a></p>
-        </div>
-      </div>      
-    </section>
-
     <footer class="footer">
       <div class="footer__copyright">
         <div class="top">
-          <span>Developed by Joeb Rogers | 2018</span>
-        </div>
-        <div class="bottom">
-          <span>Inspired by Brittany Chiang</span>
+          <span>Inspired by Joeb Rogers</span>
         </div>
       </div>
       <div class="footer__links">
