--- a/index.html
+++ b/index.html
@@ -40,29 +40,7 @@
         <img class="section__background__portrait" src="images/Icon_Potion.gif" alt="Potion" />
       </div>
       <div class="section__content">
-        <p>I'm an independent gameplay and tools engineering contractor, currently based in
-          <strong>Edinburgh, UK</strong>. I work with a wide variety of clients, from individuals looking for someone to build their
-          dream game to independent studios and startups that need a talented professional to help to develop their projects.
-          I graduated from
-          <a class="underline-link" href="https://www.bcu.ac.uk/" target="_blank">Birmingham City University</a>, with First-class Honours in
-          <a class="underline-link" href="http://www.bcu.ac.uk/courses/video-game-development-bsc-hons-2018-19" target="_blank">BSc. Interactive Entertainment: Game Development</a>, and have commercial AAA programming experience working as
-          an Online Tools Designer at
-          <a class="underline-link" href="http://www.rockstarnorth.com/" target="_blank">Rockstar North</a>.</p>
-        <p>As an independent contractor, I take a lot of joy in being able to continually work on a variety of different projects
-          as it forces me to interact with new technologies, work with new people and consistently allow me to keep growing
-          and learning. There's nothing like the freedom of being able to always work on the most interesting up-and-coming
-          opportunities that present themselves to you. My passion truly lies in game development. I love being able to design
-          and develop interactive experiences that can be enjoyed globally by a wide-range of different audiences. I also
-          love being able to create and experiment with the development of indie tools, as it gives me a chance to try and
-          give back to the community I work in and hopefully make the lives of my fellow developers easier.</p>
-        <p>
-          <strong>If I'm not working hard with clients</strong>, I'm probably working on a personal project, participating in a game
-          jam, powerlifting or exploring the gorgeous highlands of my local area.</p>
-
-        <p>
-          <strong>I'm always on the lookout for new clients with interesting projects to work on, so if you think that's you, send
-            me an email!</strong>
-        </p>
+        <p>I'm a Theoretical physicists turned Software developer.</p>
       </div>
     </section>
 
@@ -75,47 +53,15 @@
             <ul>
               <li class="skillz__category__item">C++</li>
               <li class="skillz__category__item">C#</li>
-              <li class="skillz__category__item">Lua</li>
               <li class="skillz__category__item">JavaScript (ES6)</li>
-              <li class="skillz__category__item">HTML5</li>
-              <li class="skillz__category__item">CSS3/Sass</li>
             </ul>
           </div>
           <div class="skillz__category">
             <div class="skillz__category__label">Engines / Frameworks</div>
             <ul>
               <li class="skillz__category__item"><a class="underline-link" href="https://unity3d.com/" target="_blank">Unity</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://www.unrealengine.com" target="_blank">Unreal 4</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://www.yoyogames.com/gamemaker" target="_blank">Gamemaker Studio</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://www.libsdl.org/index.php" target="_blank">SDL2</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://www.sfml-dev.org/" target="_blank">SFML</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://en.wikipedia.org/wiki/Microsoft_XNA" target="_blank">XNA</a> / <a class="underline-link" href="http://www.monogame.net/" target="_blank">Monogame</a> / <a class="underline-link" href="https://fna-xna.github.io/" target="_blank">FNA</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://phaser.io/" target="_blank">Phaser</a></li>
               <li class="skillz__category__item"><a class="underline-link" href="https://reactjs.org/" target="_blank">React</a></li>
               <li class="skillz__category__item"><a class="underline-link" href="https://nodejs.org/en/" target="_blank">Node.js</a></li>
-            </ul>
-          </div>
-          <div class="skillz__category">
-            <div class="skillz__category__label">Tools</div>
-            <ul>
-              <li class="skillz__category__item"><a class="underline-link" href="https://docs.microsoft.com/en-us/dotnet/framework/wpf/" target="_blank">WPF</a> / <a class="underline-link" href="https://docs.microsoft.com/en-us/dotnet/framework/winforms/" target="_blank">WinForms</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://www.qt.io/" target="_blank">QT</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://github.com/ocornut/imgui" target="_blank">ImGUI</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://www.fmod.com/" target="_blank">FMOD</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://www.audiokinetic.com/products/wwise/" target="_blank">Wwise</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://git-scm.com/" target="_blank">Git</a> &amp; <a class="underline-link" href="https://github.com" target="_blank">Github</a> / <a class="underline-link" href="https://about.gitlab.com/" target="_blank">GitLab</a> / <a class="underline-link" href="https://bitbucket.org/" target="_blank">BitBucket</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://www.perforce.com/" target="_blank">Perforce</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://trello.com/" target="_blank">Trello</a></li>
-            </ul>
-          </div>
-          <div class="skillz__category">
-            <div class="skillz__category__label">Fields</div>
-            <ul>
-              <li class="skillz__category__item">Gameplay</li>
-              <li class="skillz__category__item">Tools</li>
-              <li class="skillz__category__item">Scripting</li>
-              <li class="skillz__category__item">Engine</li>
-              <li class="skillz__category__item">User Interface</li>
             </ul>
           </div>
         </div>
