--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="section__title">
         Background
         <br>
-        <img class="section__background__portrait" src="images/Icon_Potion.gif" alt="Potion" />
+        <img class="section__background__portrait" src="images/atom.gif" alt="Atom" />
       </div>
       <div class="section__content">
         <p>I'm a Theoretical physicists turned Software developer.</p>
