--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h3 class="intro__contact">Would you like to get in touch? Email me at
         <span>
           <a href="mailto:lucas.fn@hotmail.com" target="_blank" class="highlight-link">lucas.fn@hotmail.com</a>
-        </span>
+        </span>.
       </h3>
     </header>
     
