--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h3 class="intro__contact">Would you like to get in touch? Email me at
         <span>
           <a href="mailto:lucas.fn@hotmail.com" target="_blank" class="highlight-link">lucas.fn@hotmail.com</a>
-        </span>.
+        </span>
       </h3>
     </header>
     
@@ -69,7 +69,7 @@
     </section>
 
     <section class="section featured-projects" data-sr>
-      <div class="section__title">Featured Projects</div>
+      <div class="section__title">Projects</div>
       <div class="section__content">
         <div class="project GTAV">
           <figure class="project__pic">
