--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img class="intro__icon" src="images/profile.jpeg" alt="Brand Icon" />
         </div>
         <h2 class="intro__tagline">I'm
-          <span class="name">Lucas Nogueira</span>, a hobbyist game developer taking my first steps into game creation.
+          <span class="name">Lucas Nogueira</span>, a hobbyist game developer aspiring to publish my first commercial game.
         </h2>
       </div>
       <h3 class="intro__contact">Would you like to get in touch? Email me at
