--- a/index.html
+++ b/index.html
@@ -155,23 +155,11 @@
         </div>
       </div>
       <div class="footer__links">
-        <a href="mailto:info@joebrogers.com" target="_blank" title="email">
+        <a href="mailto:lucas.fn@hotmail.com" target="_blank" title="email">
           <span class="text">email</span>
           <i class="fas fa-envelope"></i>
           <img src="images/itchio.svg" alt="twitter"> </a>
-        <a href="https://twitter.com/joebmakesgames" target="_blank" title="twitter">
-          <span class="text">twitter</span>
-          <i class="fab fa-twitter"></i>
-          <img src="images/itchio.svg" alt="twitter"> </a>
-        <a href="https://github.com/JoebRogers" target="_blank" title="github">
-          <span class="text">github</span>
-          <i class="fab fa-github"></i>
-          <img src="images/itchio.svg" alt="twitter"> </a>
-        <a href="https://joebrogers.itch.io/" target="_blank" title="itch.io">
-          <span class="text">itch.io</span>
-          <img class="dont-hide" src="images/itchio.svg" alt="twitter"> </a>    
-        </a>
-        <a href="https://www.linkedin.com/in/joebrogers" target="_blank" title="linkedin">
+        <a href="https://www.linkedin.com/in/lucas-nogueira-409018135/" target="_blank" title="linkedin">
           <span class="text">linkedin</span>
           <i class="fab fa-linkedin"></i>
           <img src="images/itchio.svg" alt="twitter"> </a>
