--- a/index.html
+++ b/index.html
@@ -70,35 +70,6 @@
 
     <section class="section featured-projects" data-sr>
       <div class="section__title">Projects</div>
-      <div class="section__content">
-        <div class="project GTAV">
-          <figure class="project__pic">
-            <a href="https://www.rockstargames.com/V/" target="_blank">
-              <img src="images/Banner_GTAV.jpg" alt="GTA V Logo">
-            </a>
-          </figure>
-          <figcaption class="project__caption">
-            <div class="project__name">
-              <a href="https://www.rockstargames.com/V/" target="_blank">Grand Theft Auto V: Online</a>
-            </div>
-            <p>I worked as an Online Tools Designer at Rockstar North. Within this role I worked on both GTA V Online and GTA
-              V Online: The Doomsday Heist. I scripted events and designed content within the game and extended the development
-              tools used within the teams.</p>
-          </figcaption>
-        </div>
-        <div class="project InstLife">
-          <figure class="project__pic">
-            <a href="https://play.google.com/store/apps/details?id=com.instcoffee.instlife" target="_blank">
-              <img src="images/Banner_InstLife.png" alt="InstLife Banner">
-            </a>
-          </figure>
-          <figcaption class="project__caption">
-            <div class="project__name">
-              <a href="https://play.google.com/store/apps/details?id=com.instcoffee.instlife" target="_blank">InstLife</a>
-            </div>
-            <p>I was brought in as a contractor for InstLife to develop a save/load serialization system. I had to make a number of data abstractions to make serialization of core information possible, as well as link it up with various gameplay and user interface scripts.</p>
-          </figcaption>
-        </div>
         <div class="project XDRM">
           <figure class="project__pic">
             <a href="https://joebrogers.com/Games/XDRM" target="_blank">
@@ -108,7 +79,7 @@
           <figcaption class="project__caption">
             <div class="project__name">
               <a href="https://joebrogers.com/Games/XDRM" target="_blank">
-                Xtreme Drone Racing Micro</a>
+                Basic ASCII game engine</a>
             </div>
             <p>Xtreme Drone Racing Micro is an arcade racing game developed for mobile platforms. The game puts emphasis on
               fast-paced action, with 40 AI competitors and short bursts of gameplay. Defeat your rivals, earn coins and
@@ -123,7 +94,7 @@
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="https://joebrogers.com/Games/Solys" target="_blank">Solys</a>
+              <a href="https://joebrogers.com/Games/Solys" target="_blank">Lost Language Remake</a>
             </div>
             <p>Solys is a 2D adventure roguelite, taking heavy inspiration from games such as A Link to the Past, Rogue Legacy
               and Enter the Gungeon. Solys is a verticle slice / tech demo, featuring an event-based cutscene system, melee
@@ -138,7 +109,7 @@
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="https://joebrogers.com/Games/Doctor-Who" target="_blank">Doctor Who: A Nemesis Reborn</a>
+              <a href="https://joebrogers.com/Games/Doctor-Who" target="_blank">Turtle Vs Rabbit</a>
             </div>
             <p>A Nemesis Reborn is a four-part interactive comic, developed for mobile platforms, letting you experience a fresh
               story within the Doctor Who universe. Navigate your way through a compelling tale featuring many of your favourite
