Tweak project title

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="https://joebrogers.com/Games/Solys" target="_blank">Lost Language Remake</a>
+              <a href="https://joebrogers.com/Games/Solys" target="_blank">Lost In Translation Remake</a>
             </div>
             <p>Solys is a 2D adventure roguelite, taking heavy inspiration from games such as A Link to the Past, Rogue Legacy
               and Enter the Gungeon. Solys is a verticle slice / tech demo, featuring an event-based cutscene system, melee
