Add battle of wizards gif

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="project XDRM">
           <figure class="project__pic">
             <a href="https://joebrogers.com/Games/XDRM" target="_blank">
-              <img src="images/Banner_XDRM.png" alt="XDRM Banner">
+              <img src="images/battle-of-wizards.gif" alt="XDRM Banner">
             </a>
           </figure>
           <figcaption class="project__caption">
