Add missing div

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
     <section class="section featured-projects" data-sr>
       <div class="section__title">Projects</div>
+      <div class="section__content">
         <div class="project XDRM">
           <figure class="project__pic">
             <a href="https://joebrogers.com/Games/XDRM" target="_blank">
