Add battle of wizards page

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
       <div class="section__content">
         <div class="project XDRM">
           <figure class="project__pic">
-            <a href="https://joebrogers.com/Games/XDRM" target="_blank">
+            <a href="battle-of-wizards.html" target="_blank">
               <img src="images/battle-of-wizards.gif" alt="XDRM Banner">
             </a>
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="https://joebrogers.com/Games/XDRM" target="_blank">
+              <a href="/battle-of-wizards.html" target="_blank">
                 Basic ASCII game engine</a>
             </div>
             <p>Xtreme Drone Racing Micro is an arcade racing game developed for mobile platforms. The game puts emphasis on
