Remove .html ending

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="/battle-of-wizards.html" target="_blank">
+              <a href="/battle-of-wizards" target="_blank">
                 Basic ASCII game engine</a>
             </div>
             <p>Xtreme Drone Racing Micro is an arcade racing game developed for mobile platforms. The game puts emphasis on
