Add template project images

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="project DoctorWho">
             <figure class="project__pic">
                 <a href="https://joebrogers.com/Games/Doctor-Who" target="_blank">
-                <img src="images/Banner_DW.png" alt="Doctor Who Banner">
+                <img src="images/battle-of-wizards.gif" alt="Doctor Who Banner">
                 </a>
             </figure>
             <figcaption class="project__caption">
@@ -89,7 +89,7 @@
         <div class="project Solys">
           <figure class="project__pic">
             <a href="https://joebrogers.com/Games/Solys" target="_blank">
-              <img src="images/Banner_Solys.gif" alt="Solys Banner">
+              <img src="images/battle-of-wizards.gif" alt="Solys Banner">
             </a>
           </figure>
           <figcaption class="project__caption">
