Remove skills section

--- a/index.html
+++ b/index.html
@@ -40,31 +40,7 @@
         <img class="section__background__portrait" src="images/atom.gif" alt="Atom" />
       </div>
       <div class="section__content">
-        <p>I'm a Theoretical physicists turned Software developer.</p>
-      </div>
-    </section>
-
-    <section class="section skills" data-sr>
-      <div class="section__title">Skills</div>
-      <div class="section__content">
-        <div class="skillz">
-          <div class="skillz__category">
-            <div class="skillz__category__label">Languages</div>
-            <ul>
-              <li class="skillz__category__item">C++</li>
-              <li class="skillz__category__item">C#</li>
-              <li class="skillz__category__item">JavaScript (ES6)</li>
-            </ul>
-          </div>
-          <div class="skillz__category">
-            <div class="skillz__category__label">Engines / Frameworks</div>
-            <ul>
-              <li class="skillz__category__item"><a class="underline-link" href="https://unity3d.com/" target="_blank">Unity</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://reactjs.org/" target="_blank">React</a></li>
-              <li class="skillz__category__item"><a class="underline-link" href="https://nodejs.org/en/" target="_blank">Node.js</a></li>
-            </ul>
-          </div>
-        </div>
+        <p>I'm a theoretical physicist turned Software developer. I have 5 years experience in web development.</p>
       </div>
     </section>
 
