Add noah on the moon gif

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="project Solys">
           <figure class="project__pic">
             <a href="https://joebrogers.com/Games/Solys" target="_blank">
-              <img src="images/battle-of-wizards.gif" alt="Solys Banner">
+              <img src="images/noah-on-the-moon.gif" alt="Solys Banner">
             </a>
           </figure>
           <figcaption class="project__caption">
