Add turtle vs rabbit gif

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="project DoctorWho">
             <figure class="project__pic">
                 <a href="https://joebrogers.com/Games/Doctor-Who" target="_blank">
-                <img src="images/battle-of-wizards.gif" alt="Doctor Who Banner">
+                <img src="images/turtle-vs-rabbit.gif" alt="Doctor Who Banner">
                 </a>
             </figure>
             <figcaption class="project__caption">
