--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="https://joebrogers.com/Games/Solys" target="_blank">Lost In Translation Remake</a>
+              <a href="https://joebrogers.com/Games/Solys" target="_blank">Noah on the Moon</a>
             </div>
             <p>Solys is a 2D adventure roguelite, taking heavy inspiration from games such as A Link to the Past, Rogue Legacy
               and Enter the Gungeon. Solys is a verticle slice / tech demo, featuring an event-based cutscene system, melee
@@ -86,7 +86,7 @@
             <figcaption class="project__caption">
               <div class="project__name">
                 <a href="/battle-of-wizards">
-                  Basic ASCII game engine</a>
+                  Battle of Wizards</a>
               </div>
               <p>Xtreme Drone Racing Micro is an arcade racing game developed for mobile platforms. The game puts emphasis on
                 fast-paced action, with 40 AI competitors and short bursts of gameplay. Defeat your rivals, earn coins and
