--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </figure>
             <figcaption class="project__caption">
                 <div class="project__name">
-                <a href="https://joebrogers.com/Games/Doctor-Who" target="_blank">Turtle Vs Rabbit</a>
+                <a href="https://joebrogers.com/Games/Doctor-Who" target="_blank">Turtle vs Rabbit</a>
                 </div>
                 <p>A Nemesis Reborn is a four-part interactive comic, developed for mobile platforms, letting you experience a fresh
                 story within the Doctor Who universe. Navigate your way through a compelling tale featuring many of your favourite
