Add project pages

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
       <div class="section__content">
         <div class="project DoctorWho">
             <figure class="project__pic">
-                <a href="https://joebrogers.com/Games/Doctor-Who" target="_blank">
+                <a href="/turtle-vs-rabbit">
                 <img src="images/turtle-vs-rabbit.gif" alt="Doctor Who Banner">
                 </a>
             </figure>
             <figcaption class="project__caption">
                 <div class="project__name">
-                <a href="https://joebrogers.com/Games/Doctor-Who" target="_blank">Turtle vs Rabbit</a>
+                <a href="/turtle-vs-rabbit">Turtle vs Rabbit</a>
                 </div>
                 <p>A Nemesis Reborn is a four-part interactive comic, developed for mobile platforms, letting you experience a fresh
                 story within the Doctor Who universe. Navigate your way through a compelling tale featuring many of your favourite
@@ -64,13 +64,13 @@
         </div>
         <div class="project Solys">
           <figure class="project__pic">
-            <a href="https://joebrogers.com/Games/Solys" target="_blank">
+            <a href="/noah-on-the-moon">
               <img src="images/noah-on-the-moon.gif" alt="Solys Banner">
             </a>
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="https://joebrogers.com/Games/Solys" target="_blank">Noah on the Moon</a>
+              <a href="/noah-on-the-moon">Noah on the Moon</a>
             </div>
             <p>Solys is a 2D adventure roguelite, taking heavy inspiration from games such as A Link to the Past, Rogue Legacy
               and Enter the Gungeon. Solys is a verticle slice / tech demo, featuring an event-based cutscene system, melee
