Remove placeholder paragraphs

--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
             <div class="project__name">
               <a href="/noah-on-the-moon">Noah on the Moon</a>
             </div>
-            <p>Solys is a 2D adventure roguelite, taking heavy inspiration from games such as A Link to the Past, Rogue Legacy
-              and Enter the Gungeon. Solys is a verticle slice / tech demo, featuring an event-based cutscene system, melee
-              combat and an equipment system heavily bolstered by a roguelike-inspired random loot system.</p>
+            <p>A remake of the Ludum Dare Game winner Lost in Translation by Sheepolution to learn the Unity engine.</p>
           </figcaption>
         </div>
         <div class="project XDRM">
@@ -88,9 +86,7 @@
                 <a href="/battle-of-wizards">
                   Battle of Wizards</a>
               </div>
-              <p>Xtreme Drone Racing Micro is an arcade racing game developed for mobile platforms. The game puts emphasis on
-                fast-paced action, with 40 AI competitors and short bursts of gameplay. Defeat your rivals, earn coins and
-                completely customise your drone with over 40 million combinations!</p>
+              <p>Rock Paper Scissors with a twist.</p>
             </figcaption>
         </div>
       </div>
