Add battle of wizards description

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
                 <a href="/battle-of-wizards">
                   Battle of Wizards</a>
               </div>
-              <p>Rock Paper Scissors with a twist.</p>
+              <p>Battle of Wizards is a unique take on Rock Paper Scissors, and it was my very first game. I built it from the ground
+                 up using a custom ASCII game engine I created in C++ for a university module on Object-Oriented Programming. 
+                 It was a great learning experience and my introduction to game development.</p>
             </figcaption>
         </div>
       </div>
