Add strong tags

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   Battle of Wizards</a>
               </div>
               <p>Battle of Wizards is a unique take on Rock Paper Scissors, and it was my very first game. I built it from the ground
-                 up using a custom ASCII game engine I created in C++ for a university module on Object-Oriented Programming. 
+                 up using a <strong>custom ASCII game engine</strong> I created in <strong>C++</strong> for a university module on <strong>Object-Oriented Programming</strong>. 
                  It was a great learning experience and my introduction to game development.</p>
             </figcaption>
         </div>
