Add Noah on the Moon

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
             <div class="project__name">
               <a href="/noah-on-the-moon">Noah on the Moon</a>
             </div>
-            <p>A remake of the Ludum Dare Game winner Lost in Translation by Sheepolution to learn the Unity engine.</p>
+            <p>Noah on the Moon, a remake of the Ludum Dare #45 winner Lost in Translation, was my first larger endeavor in Unity. 
+              It's a <strong>language puzzle game</strong> that served as an educational exercise where I learned both how to use the engine and 
+              how to manage a more complex project.</p>
           </figcaption>
         </div>
         <div class="project XDRM">
