--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
                 <div class="project__name">
                 <a href="/turtle-vs-rabbit">Turtle vs Rabbit</a>
                 </div>
-                <p>A Nemesis Reborn is a four-part interactive comic, developed for mobile platforms, letting you experience a fresh
-                story within the Doctor Who universe. Navigate your way through a compelling tale featuring many of your favourite
-                characters whilst solving puzzles and completing minigames. Part comic, part game, all fun.</p>
+                <p>Inspired by Aesop's timeless fable "The Tortoise and the Hare," this game relives memories of my childhood when I first discovered
+                   sokoban games through Miniclip's Silversphere. Later, I drew inspiration from the enchanting mechanics of Draknek & Friends's A Monster's Expedition.
+                    Currently in the prototype stage, this is my first venture into creating a commercial game. Players will navigate through 10 distinct biomes, 
+                    each featuring 10 levels that introduce innovative mechanics, making every environment a fresh challenge.</p>
             </figcaption>
         </div>
         <div class="project Solys">
