Rephrase turtle vs rabbit description

--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
                 <div class="project__name">
                 <a href="/turtle-vs-rabbit">Turtle vs Rabbit</a>
                 </div>
-                <p>Inspired by Aesop's timeless fable "The Tortoise and the Hare," this game relives memories of my childhood when I first discovered
-                   sokoban games through Miniclip's Silversphere. Later, I drew inspiration from the enchanting mechanics of Draknek & Friends's A Monster's Expedition.
-                    Currently in the prototype stage, this is my first venture into creating a commercial game. Players will navigate through 10 distinct biomes, 
-                    each featuring 10 levels that introduce innovative mechanics, making every environment a fresh challenge.</p>
+                <p>Inspired by Aesop's fable "The Tortoise and the Hare," this game brings back childhood memories of 
+                  discovering my first sokoban game, Miniclip's Silversphere. Also inspired by Draknek & Friends's 
+                  A Monster's Expedition, this marks my first venture into creating a commercial game. Currently in the 
+                  prototype stage, it is designed to feature 10 biomes, each with 10 levels, introducing innovative mechanics 
+                  in every environment.
+                </p>
             </figcaption>
         </div>
         <div class="project Solys">
