rewrite turtle vs rabbit description

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                 <div class="project__name">
                 <a href="/turtle-vs-rabbit">Turtle vs Rabbit</a>
                 </div>
-                <p>Inspired by Aesop's fable "The Tortoise and the Hare," this game brings back childhood memories of 
-                  discovering my first sokoban game, Miniclip's Silversphere. Also inspired by Draknek & Friends's 
-                  A Monster's Expedition, this marks my first venture into creating a commercial game. Currently in the 
-                  prototype stage, it is designed to feature 10 biomes, each with 10 levels, introducing innovative mechanics 
-                  in every environment.
+                <p>
+                  Inspired by Aesop's fable <em>The Tortoise and the Hare</em>, this game aims to be the successor to sokoban 
+                  titles like <em>Silversphere</em> and <em>A Monster's Expedition</em>. This project also marks my first 
+                  venture into the world of commercial games. Currently in the prototype stage, it is designed to feature 
+                  10 biomes, with 10 levels each, introducing innovative mechanics in every environment.
                 </p>
             </figcaption>
         </div>
