Remove commercial games sentence

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                 </div>
                 <p>
                   Inspired by Aesop's fable <em>The Tortoise and the Hare</em>, this game aims to be the successor to sokoban 
-                  titles like <em>Silversphere</em> and <em>A Monster's Expedition</em>. This project also marks my first 
-                  venture into the world of commercial games. Currently in the prototype stage, it is designed to feature 
+                  titles like <em>Silversphere</em> and <em>A Monster's Expedition</em>. Currently in the prototype stage, it is designed to feature 
                   10 biomes, with 10 levels each, introducing innovative mechanics in every environment.
                 </p>
             </figcaption>
