--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="/turtle-vs-rabbit">Turtle vs Rabbit</a>
                 </div>
                 <p>
-                  Inspired by Aesop's fable <em>The Tortoise and the Hare</em>, this game aims to be the successor to sokoban 
+                  Inspired by Aesop's timeless fable <em>The Tortoise and the Hare</em>, this game aims to be the successor to sokoban 
                   titles like <em>Silversphere</em> and <em>A Monster's Expedition</em>. Currently in the prototype stage, it is designed to feature 
                   10 biomes, with 10 levels each, introducing innovative mechanics in every environment.
                 </p>
