Add emphasisis tags

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="project__name">
               <a href="/noah-on-the-moon">Noah on the Moon</a>
             </div>
-            <p>Noah on the Moon, a remake of the Ludum Dare #45 winner Lost in Translation, was my first larger endeavor in <strong>Unity</strong>. 
+            <p>Noah on the Moon, a remake of the <em>Ludum Dare</em> #45 winner <em>Lost in Translation</em>, was my first larger endeavor in <strong>Unity</strong>. 
               It's a <strong>language puzzle game</strong> that served as an educational exercise where I learned both how to use the engine and 
               how to manage a more complex project.</p>
           </figcaption>
