--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Lucas Nogueira">
 
   <link rel="stylesheet" href="css/main.css">
-  <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
+  <link rel="shortcut icon" type="image/ico" href="images/atom.gif"/>
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 
