--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         <img class="section__background__portrait" src="images/atom.gif" alt="Atom" />
       </div>
       <div class="section__content">
-        <p>With a BSc in Theoretical Physics and an MSc in Quantum Fields and Fundamental Forces, my academic journey initially led 
-          me down a path I never anticipated—software development, particularly in the realm of game development. During my time at 
-          university, I took an Object-Oriented Programming module in C++, where I created an ASCII game engine for my final project. 
-          This experience ignited my interest in game development, laying the groundwork for my future endeavors.
-          By the end of my master’s program, my fascination with software development had grown significantly, prompting me to pursue 
+        <p>With a BSc in Theoretical Physics and an MSc in Quantum Fields and Fundamental Forces, my academic journey led 
+          me down a path I never anticipated — software development, particularly in the realm of game development.</p> 
+        <p>During my time at university, I took an Object-Oriented Programming module in C++, where I created an ASCII game engine for my final project. 
+          This experience ignited my interest in game development, laying the groundwork for my future endeavors.</p>
+        <p>By the end of my master’s program, my fascination with software development had grown significantly, prompting me to pursue 
           a career as a Software Developer. Over the next five years, I focused primarily on web development, honing my skills and 
-          expanding my technical expertise.
-          In one of those years, I participated in Ludum Dare, an experience that rekindled my passion for game development. Now, 
+          expanding my technical expertise.</p>
+         <p>In one of those years, I participated in Ludum Dare, an experience that rekindled my passion for game development. Now, 
           with a solid understanding of the Unity engine, I’m excited to be working on my first commercial title, Turtle vs Rabbit, a game set in the world of sokoban puzzles.
           </p>
       </div>
