--- a/index.html
+++ b/index.html
@@ -39,16 +39,19 @@
         <img class="section__background__portrait" src="images/atom.gif" alt="Atom" />
       </div>
       <div class="section__content">
-        <p>With a BSc in Theoretical Physics and an MSc in Quantum Fields and Fundamental Forces, my academic journey led 
-          me down a path I never anticipated — software development, particularly in the realm of game development.</p> 
-        <p>During my time at university, I took an Object-Oriented Programming module in C++, where I created an ASCII game engine for my final project. 
-          This experience ignited my interest in game development, laying the groundwork for my future endeavors.</p>
-        <p>By the end of my master’s program, my fascination with software development had grown significantly, prompting me to pursue 
-          a career as a Software Developer. Over the next five years, I focused primarily on web development, honing my skills and 
-          expanding my technical expertise.</p>
-         <p>In one of those years, I participated in Ludum Dare, an experience that rekindled my passion for game development. Now, 
-          with a solid understanding of the Unity engine, I’m excited to be working on my first commercial title, Turtle vs Rabbit, a game set in the world of sokoban puzzles.
-          </p>
+        <p>With a BSc in Theoretical Physics and an MSc in Quantum Fields and Fundamental Forces under my belt, 
+          you'd think I was destined to be the next Einstein. But plot twist - I ended up in game development!</p>
+        <p>Back in university, I took an Object-Oriented Programming module in C++. For my final project, I decided 
+          to create an ASCII game engine - because who doesn't want to play a game that looks like it was made in 
+          the '80s? That experience lit a fire in me for game dev, setting the stage for what was to come.</p>
+        <p>By the end of my master's program, I found myself fascinated by software development and thought, 
+          “Why not make it my job?” So, I jumped into the world of Software Development, spending five years 
+          focusing on web development. I polished my skills and discovered that code can be just as thrilling 
+          as solving a physics problem - most of the time, anyway!</p>
+        <p>In one of those years, I dove into Ludum Dare, a game jam that sparked my passion for game development 
+          all over again. Now, armed with a solid grasp of the Unity engine, I'm thrilled to be working on my first commercial 
+          title, <strong>Turtle vs Rabbit</strong>, a sokoban puzzle game that promises to be a fun ride—unless, of course, you're a turtle 
+          trying to outrun a rabbit!</p>
       </div>
     </section>
 
