--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           “Why not make it my job?” So, I jumped into the world of Software Development, spending five years 
           focusing on web development. I polished my skills and discovered that code can be just as thrilling 
           as solving a physics problem - most of the time, anyway!</p>
-        <p>In one of those years, I dove into Ludum Dare, a game jam that sparked my passion for game development 
+        <p>In one of those years, I participated in <em>Ludum Dare</em>, an experience that sparked my passion for game development 
           all over again. Now, armed with a solid grasp of the Unity engine, I'm thrilled to be working on my first commercial 
           title, <strong>Turtle vs Rabbit</strong>, a sokoban puzzle game that promises to be a fun ride—unless, of course, you're a turtle 
           trying to outrun a rabbit!</p>
