--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           as solving a physics problem - most of the time, anyway!</p>
         <p>In one of those years, I participated in <em>Ludum Dare</em>, an experience that sparked my passion for game development 
           all over again. Now, armed with a solid grasp of the Unity engine, I'm thrilled to be working on my first commercial 
-          title, <strong>Turtle vs Rabbit</strong>, a sokoban puzzle game that promises to be a fun ride—unless, of course, you're a turtle 
+          title, <strong>Turtle vs Rabbit</strong>, a sokoban puzzle game that promises to be a fun ride - unless, of course, you're a turtle 
           trying to outrun a rabbit!</p>
       </div>
     </section>
