--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           for what was to come.</p>
         <p>By the end of my master's program, I was still fascinated by software development and thought, 
           “Why not make it my job?” So, I jumped into the world of software development, spending five years 
-          mostly focused on web development. I polished my skills and discovered that code can be just as thrilling 
+          mostly focused on web dev. I polished my skills and discovered that code can be just as thrilling 
           as solving a physics problem - most of the time, anyway!</p>
-        <p>In one of those years, I participated in <em>Ludum Dare</em>, an experience that sparked my passion for game development 
+        <p>In one of those years, I participated in <em>Ludum Dare</em>, an experience that sparked my passion for game dev 
           all over again. Now, armed with a solid grasp of the Unity engine, I'm thrilled to be working on my first commercial 
           title, <strong>Turtle vs Rabbit</strong>, a sokoban puzzle game that promises to be a fun ride - unless, of course, you're a turtle 
           trying to outrun a rabbit!</p>
