--- a/battle-of-wizards.html
+++ b/battle-of-wizards.html
@@ -47,18 +47,18 @@
 
             <div class="col-md-6">
 
-                <img class="img-fluid" src="img/solysScreenshots/solys screenshot%20(1).gif" alt="Screenshots"/>
-                <img class="img-fluid" src="img/solysScreenshots/solys screenshot%20(3).gif" alt="Screenshots"/>
-                <img class="img-fluid" src="img/solysScreenshots/solys screenshot%20(5).gif" alt="Screenshots"/>
-                <img class="img-fluid" src="img/solysScreenshots/solys screenshot%20(7).png" alt="Screenshots"/>
+                <img class="img-fluid" src="images/battle-of-wizards.gif" alt="Screenshots"/>
+                <img class="img-fluid" src="images/battle-of-wizards.gif" alt="Screenshots"/>
+                <img class="img-fluid" src="images/battle-of-wizards.gif" alt="Screenshots"/>
+                <img class="img-fluid" src="images/battle-of-wizards.gif" alt="Screenshots"/>
 
             </div>
 
             <div class="col-md-6">
 
-                <img class="img-fluid" src="img/solysScreenshots/solys screenshot%20(2).gif" alt="Screenshots"/>
-                <img class="img-fluid" src="img/solysScreenshots/solys screenshot%20(4).gif" alt="Screenshots"/>
-                <img class="img-fluid" src="img/solysScreenshots/solys screenshot%20(6).gif" alt="Screenshots"/>
+                <img class="img-fluid" src="images/battle-of-wizards.gif" alt="Screenshots"/>
+                <img class="img-fluid" src="images/battle-of-wizards.gif" alt="Screenshots"/>
+                <img class="img-fluid" src="images/battle-of-wizards.gif" alt="Screenshots"/>
 
             </div>
 
