--- a/battle-of-wizards.html
+++ b/battle-of-wizards.html
@@ -9,7 +9,7 @@
 
     <title>Battle of Wizards</title>
     
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/project-page.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
     
 </head>
