--- a/index.html
+++ b/index.html
@@ -92,14 +92,11 @@
         </div>
         <div class="project XDRM">
             <figure class="project__pic">
-              <a href="/battle-of-wizards">
-                <img src="images/battle-of-wizards.gif" alt="XDRM Banner">
-              </a>
+              <img src="images/battle-of-wizards.gif" alt="XDRM Banner">
             </figure>
             <figcaption class="project__caption">
               <div class="project__name">
-                <a href="/battle-of-wizards">
-                  Battle of Wizards</a>
+                  Battle of Wizards
               </div>
               <p>Battle of Wizards is a unique take on Rock Paper Scissors, and it was my very first game. I built it from the ground
                  up using a <strong>custom ASCII game engine</strong> I created in <strong>C++</strong> for a university module on <strong>Object-Oriented Programming</strong>. 
