--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </figure>
             <figcaption class="project__caption">
               <div class="project__name">
-                  Battle of Wizards
+                  <strong>Battle of Wizards</strong>
               </div>
               <p>Battle of Wizards is a unique take on Rock Paper Scissors, and it was my very first game. I built it from the ground
                  up using a <strong>custom ASCII game engine</strong> I created in <strong>C++</strong> for a university module on <strong>Object-Oriented Programming</strong>. 
